fix: font size in nav bar

--- a/Private-messenger.html
+++ b/Private-messenger.html
@@ -104,10 +104,10 @@
         <div style="font-size: inherit;" id="navigation" class="navbar-nav ml-auto">
             <ul class="navbar-nav mt-1">
                 <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
-                    <a style="font-size: 1.35rem;" class="nav-link" href="index.html#about">What is PCN</a>
+                    <a class="nav-link" href="index.html#about">What is PCN</a>
                 </li>
                 <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
-                    <a style="font-size: 1.35rem;" class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Features</a>
+                    <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Features</a>
                     <div class="dropdown-menu" aria-labelledby="more">
                         <a class="dropdown-item" href="Private-Messenger.html">Private Messenger</a>
                         <a class="dropdown-item" href="Account-Generation.html">Account Generation</a>
@@ -117,16 +117,16 @@
                     </div>
                 </li>
                 <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
-                    <a style="font-size: 1.35rem;" class="nav-link" href="index.html#whitepaper">Whitepaper</a>
+                    <a class="nav-link" href="index.html#whitepaper">Whitepaper</a>
                 </li>
                 <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
-                    <a style="font-size: 1.35rem;" class="nav-link" href="index.html#token-sale-mobile-app">Token Sale</a>
+                    <a class="nav-link" href="index.html#token-sale-mobile-app">Token Sale</a>
                 </li>
                 <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.5s">
-                    <a style="font-size: 1.35rem;" class="nav-link" href="index.html#roadmap">Roadmap</a>
+                    <a class="nav-link" href="index.html#roadmap">Roadmap</a>
                 </li>
                 <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
-                    <a style="font-size: 1.35rem;" class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
+                    <a class="dropdown-toggle white" href="#" role="button" id="more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
                     <div class="dropdown-menu" aria-labelledby="more">
                         <a class="dropdown-item" href="index.html#mobile-app">App</a>
                         <a class="dropdown-item" href="index.html#team">Team</a>
@@ -137,7 +137,7 @@
                     </div>
                 </li>
                 <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
-                    <a style="font-size: 1.35rem;" class="dropdown-toggle" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"></span> EN</a>
+                    <a class="dropdown-toggle" href="#" role="button" id="language" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-us"></span> EN</a>
                     <div class="dropdown-menu" aria-labelledby="language">
                         <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-de"></span> GN</a>
                         <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-es"></span> SP</a>
