--- a/Private-messenger.html
+++ b/Private-messenger.html
@@ -76,7 +76,7 @@
         <g>
             <circle cx="256" cy="256" r="75" fill="none" stroke="url(#loaderLinearColors)" />
         </g>
-        <circle cx="256" cy="256" r="60" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
+        <circle cx="256" cy="256" r="100" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
 
         <!-- Change the preloader logo here -->
         <defs>
@@ -112,7 +112,7 @@
     <header class="page-header">
       <!-- Horizontal Menu Start-->
       <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-    <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img style="width: 120px; height: 65px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
+    <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img style="width: 160px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -120,7 +120,7 @@
         <div style="font-size: inherit;" id="navigation" class="navbar-nav ml-auto">
             <ul class="navbar-nav mt-1">
                 <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
-                    <a class="nav-link" href="index.html#about">What is PCN</a>
+                    <a class="nav-link" href="index.html#about">About</a>
                 </li>
                 <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
                     <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Features</a>
@@ -331,10 +331,6 @@ Benefits -->
                 <h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Peer-to-Peer Messaging</h3>
                 <p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display font-medium leading-normal">PCNP removes centralized choke points from your messages for greater privacy and security. Levering a peer-to-peer network instead of centralized servers for the routing of messages, your communication is yours and yours alone.</p>
                 <div class="flex">
-                    <a href="https://specs.PCNP.io/spec/10" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-black  text-black rounded border-white bg-white text-lg">
-                        View the Specs
-                        <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right.svg"></span>
-                    </a>
                     <a href="https://our.PCNP.io/peer-to-peer-messaging-where-whisper-falls-short-and-waku-picks-up/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-white text-lg ml-8">
                         Learn More
                         <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
@@ -425,56 +421,56 @@ Benefits -->
  </div>
  </div> 
  <footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white"><div class="container">
-	<div class="footer-wrapper">
-		<div class="row">
-			<div class="col-md-4">
-				<div class="about">
-					<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-						<img style="width: 40px; height: 50px; margin-bottom: 5px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
-						<span style="margin-left: 5px; font-size: 1.9rem !important;" class="logo-text">PCN Protocol</span>
-					</div>
-					<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
-						<p style="font-size: 1.3rem !important;" class="grey-accent2">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
-					</div>
-					<ul style="font-size: 30px;" class="social-buttons list-unstyled mb-5">
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a style="font-size: 18px;" href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a style="font-size: 18px;" href="https://twitter.com/PcnProtocol" target="_blank" title="Twitter" class="btn font-medium"><i class="ti-twitter-alt"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a style="font-size: 18px;" href="https://www.reddit.com/r/PCNProtocol/" target="_blank" title="Reddit" class="btn font-medium"><i class="ti-reddit"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a style="font-size: 18px;" href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank" title="Youtube" class="btn font-medium"><i class="ti-youtube"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a style="font-size: 18px;" href="https://github.com/PCN-Protocol" target="_blank" title="GitHub" class="btn font-medium"><i class="ti-github"></i></a></li>
+    <div class="footer-wrapper">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="about">
+                    <div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
+                        <img style="width: 40px; height: 50px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
+                        <p style="margin-left: 45px; margin-top: -50px; font-size: 1.9rem !important;" class="logo-text">PCN Protocol</p>
+                    </div>
+                    <div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
+                        <p style="font-size: 1.3rem !important;" class="grey-accent2">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
+                    </div>
+                    <ul style="font-size: 30px;" class="social-buttons list-unstyled mb-5">
+                        <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a style="font-size: 18px;" href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
+                        <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a style="font-size: 18px;" href="https://twitter.com/PcnProtocol" target="_blank" title="Twitter" class="btn font-medium"><i class="ti-twitter-alt"></i></a></li>
+                        <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a style="font-size: 18px;" href="https://www.reddit.com/r/PCNProtocol/" target="_blank" title="Reddit" class="btn font-medium"><i class="ti-reddit"></i></a></li>
+                        <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a style="font-size: 18px;" href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank" title="Youtube" class="btn font-medium"><i class="fa fa-youtube-play"></i></a></li>
+                        <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a style="font-size: 18px;" href="https://github.com/PCN-Protocol" target="_blank" title="GitHub" class="btn font-medium"><i class="ti-github"></i></a></li>
                         <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a style="font-size: 18px;" href="https://www.instagram.com/pcnprotocol/" target="_blank" title="Instagram" class="btn font-medium"><i class="ti-instagram"></i></a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="links">
-					<h5 style="font-size: 1.9rem ;" class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Useful Links</h5>
-					<ul style="font-size: 1.3rem !important;" class="useful-links float-left mr-5">
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="#">What is PCN</a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a href="#">Solutions</a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a href="#">Whitepaper </a></li>
-					</ul>
-					<ul style="font-size: 1.3rem !important;" class="useful-links">
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.9s"><a href="#">Roadmap</a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s"><a href="#">Team</a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.1s"><a href="#">Sign in</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="feed">
-					<h5 style="font-size: 1.9rem !important;" class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">Twitter Feed</h5>
-					<div class="tweets">
-						<span style="font-size: 1.3rem !important;" class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s">More about our most powerful theme PCN Protocol : https://t.co/JHBAS345</span>
-						<span style="font-size: 1.3rem !important;" class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">More infotamation about CIC Coin : https://t.co/JHSD34JHB</span>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="copy-right mx-auto text-center">
-			<span style="font-size: 1.3rem !important;" class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white">Pixinvent</a></span>
-		</div>
-	</div>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="links">
+                    <h5 style="font-size: 1.9rem ; margin-top: 10px;" class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
+                    <ul style="font-size: 1.3rem !important;" class="useful-links float-left mr-5">
+                        <li class="animated"  data-animation-delay="0.6s"><a href="index.html#about">About</a></li>
+                        <li class="animated"  data-animation-delay="0.7s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
+                        <li class="animated"  data-animation-delay="0.8s"><a href="#index.html#whitepaper">Whitepaper </a></li>
+                    </ul>
+                    <ul style="font-size: 1.3rem !important;" class="useful-links">
+                        <li class="animated"  data-animation-delay="0.9s"><a href="#">Roadmap</a></li>
+                        <li class="animated"  data-animation-delay="1.0s"><a href="#">Team</a></li>
+                        <li class="animated"  data-animation-delay="1.1s"><a href="#">Sign in</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="feed">
+                    <h5 style="font-size: 1.9rem !important; margin-top: 10px;" class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">Twitter Feed</h5>
+                    <div class="tweets">
+                        <span style="font-size: 1.3rem !important;" class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s">More about our most powerful theme PCN Protocol : https://t.co/JHBAS345</span>
+                        <span style="font-size: 1.3rem !important;" class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">More infotamation about CIC Coin : https://t.co/JHSD34JHB</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copy-right mx-auto text-center">
+            <span style="font-size: 1.3rem !important;" class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white">Pixinvent</a></span>
+        </div>
+    </div>
 </div>
 </footer>
 
