--- a/faq.html
+++ b/faq.html
@@ -50,7 +50,7 @@
         <g>
             <circle cx="256" cy="256" r="75" fill="none" stroke="url(#loaderLinearColors)" />
         </g>
-        <circle cx="256" cy="256" r="60" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
+        <circle cx="256" cy="256" r="100" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
 
         <!-- Change the preloader logo here -->
         <defs>
@@ -77,7 +77,7 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img style="width: 120px; height: 65px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img style="width: 170px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -85,7 +85,7 @@
           <div id="navigation" class="navbar-nav ml-auto">
               <ul class="navbar-nav mt-1">
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
-                      <a class="nav-link" href="index.html#about">What is PCN</a>
+                      <a class="nav-link" href="index.html#about">About</a>
                   </li>
                   <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
                       <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Features</a>
@@ -439,7 +439,7 @@
 						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
 						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a href="https://twitter.com/PcnProtocol" target="_blank" title="Twitter" class="btn font-medium"><i class="ti-twitter-alt"></i></a></li>
 						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="https://www.reddit.com/r/PCNProtocol/" target="_blank" title="Reddit" class="btn font-medium"><i class="ti-reddit"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank" title="Youtube" class="btn font-medium"><i class="ti-youtube"></i></a></li>
+						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank" title="Youtube" class="btn font-medium"><i class="fa fa-youtube-play"></i></a></li>
 						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a href="https://github.com/PCN-Protocol" target="_blank" title="GitHub" class="btn font-medium"><i class="ti-github"></i></a></li>
                         <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a href="https://www.instagram.com/pcnprotocol/" target="_blank" title="Instagram" class="btn font-medium"><i class="ti-instagram"></i></a></li>
 					</ul>
@@ -447,16 +447,16 @@
 			</div>
 			<div class="col-md-4">
 				<div class="links">
-					<h5 class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Useful Links</h5>
+					<h5 class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
 					<ul class="useful-links float-left mr-5">
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="#">What is PCN</a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a href="#">Solutions</a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a href="#">Whitepaper </a></li>
+                        <li class="animated"  data-animation-delay="0.6s"><a href="index.html#about">About</a></li>
+                        <li class="animated"  data-animation-delay="0.7s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
+                        <li class="animated"  data-animation-delay="0.8s"><a href="#index.html#whitepaper">Whitepaper </a></li>
 					</ul>
 					<ul class="useful-links">
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.9s"><a href="#">Roadmap</a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s"><a href="#">Team</a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.1s"><a href="#">Sign in</a></li>
+						<li class="animated"  data-animation-delay="0.9s"><a href="#">Roadmap</a></li>
+                        <li class="animated"  data-animation-delay="1.0s"><a href="#">Team</a></li>
+                        <li class="animated"  data-animation-delay="1.1s"><a href="#">Sign in</a></li>
 					</ul>
 				</div>
 			</div>
