Footer logo fix

--- a/Private-messenger.html
+++ b/Private-messenger.html
@@ -426,8 +426,8 @@ Benefits -->
             <div class="col-md-4">
                 <div class="about">
                     <div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-                        <img style="width: 40px; height: 50px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
-                        <p style="margin-left: 45px; margin-top: -50px; font-size: 1.9rem !important;" class="logo-text">PCN Protocol</p>
+                        <img style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
+                        <p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text">PCN Protocol</p>
                     </div>
                     <div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
                         <p style="font-size: 1.3rem !important;" class="grey-accent2">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
