--- a/faq.html
+++ b/faq.html
@@ -429,8 +429,8 @@
 			<div class="col-md-4">
 				<div class="about">
 					<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-						<img style="width: 40px; height: 50px; margin-bottom: 5px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
-						<span style="margin-left: 5px;" class="logo-text">PCN Protocol</span>
+						<img style="width: 65px; height: 55px; margin-top: -10px; margin-left: -20px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
+						<p style="margin-left: 50px; margin-top: -50px; color: #fff;" class="logo-text">PCN Protocol</p>
 					</div>
 					<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
 						<p class="grey-accent2">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
@@ -449,14 +449,14 @@
 				<div class="links">
 					<h5 class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
 					<ul class="useful-links float-left mr-5">
-                        <li class="animated"  data-animation-delay="0.6s"><a href="index.html#about">About</a></li>
-                        <li class="animated"  data-animation-delay="0.7s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
-                        <li class="animated"  data-animation-delay="0.8s"><a href="#index.html#whitepaper">Whitepaper </a></li>
+						<li class="animated"  data-animation-delay="0.6s"><a href="index.html#about">About</a></li>
+						<li class="animated"  data-animation-delay="0.7s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
+						<li class="animated"  data-animation-delay="0.8s"><a href="#index.html#whitepaper">Whitepaper </a></li>
 					</ul>
 					<ul class="useful-links">
-						<li class="animated"  data-animation-delay="0.9s"><a href="#">Roadmap</a></li>
-                        <li class="animated"  data-animation-delay="1.0s"><a href="#">Team</a></li>
-                        <li class="animated"  data-animation-delay="1.1s"><a href="#">Sign in</a></li>
+						<li class="animated"  data-animation-delay="0.9s"><a href="index.html#roadmap">Roadmap</a></li>
+						<li class="animated"  data-animation-delay="1.0s"><a href="index.html#team">Team</a></li>
+						<li class="animated"  data-animation-delay="1.1s"><a href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html">Sign in</a></li>
 					</ul>
 				</div>
 			</div>
