change features block background color

--- a/index.html
+++ b/index.html
@@ -456,13 +456,13 @@
 <section style="margin-top: 90px;" id="explore">
     <div class="max-w-screen-2xl mx-auto lg:px-12">
         <div class="grid md:grid-cols-2">
-            <div class=" relative">
-                <span class=" w-screen absolute -z-1 right-0 h-full"></span>
+            <div style="background: linear-gradient(#e66465, #9198e5);" class=" relative">
+                <span style="background: linear-gradient(#e66465, #9198e5);" class=" w-screen absolute -z-1 right-0 h-full"></span>
                 <div class="h-full px-8 py-32 md:pr-16">
                     <div class="row">
                         <div class="col-md-11 col-lg-10">
-                            <h3 style="font-size: 39px;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl ">Truly Private Messaging</h3>
-                            <p style="font: size 14px; color: black;" class=" 2xl:text-xl mt-6">PCNP uses an open-source, peer-to-peer protocol, and end-to-end encryption to protect your messages from third parties. Keep your private messages private with PCNP.</p>
+                            <h3 style="font-size: 39px; color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl ">Truly Private Messaging</h3>
+                            <p style="font: size 14px;" class=" 2xl:text-xl mt-6">PCNP uses an open-source, peer-to-peer protocol, and end-to-end encryption to protect your messages from third parties. Keep your private messages private with PCNP.</p>
                             <a href="#token-sale-mobile-app" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.7s" style="animation-delay: 1.7s; opacity: 1;">Explore All Features</a>
                         </div>
                     </div>
@@ -503,7 +503,7 @@
 						</div>
 					</div>
 				</div>
-				<div class=" relative order-1 md:order-none">
+				<div style="background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4);" class=" relative order-1 md:order-none">
 					<span class=" w-screen absolute -z-1 left-0 h-full"></span>
 					<div class="h-full flex flex-col space-between px-8 py-32 md:pr-16 text-white">
 						<div class="row">
