--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         <div class="col-md-11 col-lg-10">
                             <h3 style="font-size: 39px; color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl ">Truly Private Messaging</h3>
                             <p style="font: size 14px;" class=" 2xl:text-xl mt-6">PCNP uses an open-source, peer-to-peer protocol, and end-to-end encryption to protect your messages from third parties. Keep your private messages private with PCNP.</p>
-                            <a href="#token-sale-mobile-app" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.7s" style="animation-delay: 1.7s; opacity: 1;">Explore All Features</a>
+                            <a href="Private-messenger.html" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="1.7s" style="animation-delay: 1.7s; opacity: 1;">Explore All Features</a>
                         </div>
                     </div>
                 </div>
