change loader logo

--- a/Private-messenger.html
+++ b/Private-messenger.html
@@ -30,7 +30,7 @@
     <!-- BEGIN Custom CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- END Custom CSS-->
-    <link rel="stylesheet" href="pri-mess.css"> 
+    <!-- <link rel="stylesheet" href="pri-mess.css">  -->
     <link rel="manifest" href="/theme-assets/manifest.json">
     <meta name="msapplication-TileColor" content="#4360DF">
     <meta name="msapplication-TileImage" content="/theme-assets/images/ms-icon-144x144.png"> 
@@ -64,18 +64,7 @@
             <stop offset="5%" stop-color="#28bcfd"></stop>
             <stop offset="100%" stop-color="#1d78ff"></stop>
         </linearGradient>        
-        <g>
-            <circle cx="256" cy="256" r="150" fill="none" stroke="url(#loaderLinearColors)" />
-        </g>
-        <g>
-            <circle cx="256" cy="256" r="125" fill="none" stroke="url(#loaderLinearColors)" />
-        </g>
-        <g>
-            <circle cx="256" cy="256" r="100" fill="none" stroke="url(#loaderLinearColors)" />
-        </g>
-        <g>
-            <circle cx="256" cy="256" r="75" fill="none" stroke="url(#loaderLinearColors)" />
-        </g>
+        
         <circle cx="256" cy="256" r="100" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
 
         <!-- Change the preloader logo here -->
@@ -278,18 +267,7 @@
 </section>
 
 
-<div class="max-w-screen-2xl mx-auto lg:py-48 lg:px-20">
-    <div class="grid md:grid-cols-1">
-        <div class="flex flex-col justify-center text-white lg:xl-48 px-8 items-center py-32">
-            <h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center">Have an idea for a new feature?</h3>
-            <p class="text-primary-200 font-thin text-xl max-w-screen-md px-12 text-center pt-6">Is something missing from your experience? Create a feature request in our</p>
-            <a href="/faq/#messenger" target="_blank" class="group inline-flex group items-center text-white mt-12 font-semibold font-special ">
-                Community forum
-                <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
-            </a>
-        </div>
-    </div>
-</div>
+
 
 
 <!-- 
