--- a/Private-messenger.html
+++ b/Private-messenger.html
@@ -165,7 +165,7 @@
     <div class="content-wrapper">
         <div class="content-body">
           <main style="font-size: 10px !important"><!-- Header: 3D Animation -->
-    <section style="margin-top: 50px;" class="head-area" id="head-area">
+    <section style="margin-top: 200px;" class="head-area" id="head-area">
         <div id="particles-js"></div>
         <div class="head-content d-flex align-items-center">
             <div class="container">
@@ -234,7 +234,7 @@
                 </div>
                 <div class="flex flex-col px-8 order-second md:order-last justify-center items-start md:pt-0 pt-32">
                     <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Message on your terms</h3>
-                    <p style="color: #fff;" class="text-gray-300 mt-6 text-xl font-display font-medium leading-normal">Send 1:1 private chats, private group chats, and join or create public channels to connect with your community.</p>
+                    <p style="color: #fff;" class="text-gray-300 mt-6 text-xl font-display  leading-normal">Send 1:1 private chats, private group chats, and join or create public channels to connect with your community.</p>
                 </div>
             </div>
         </div> 
@@ -272,7 +272,7 @@
 
 <!-- 
 Benefits -->
-<section  class="pb-32 lg:pb-48 pt-32 lg:pt-0">
+<section style="margin-top: 120px;" class="pb-32 lg:pb-48 pt-32 lg:pt-0">
     <div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
         <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Benefits</h3>
         <ul class="grid md:grid-cols-3 mt-16 gap-24">
@@ -307,9 +307,9 @@ Benefits -->
         <div class="grid md:grid-cols-2 gap-24">
             <div class="flex flex-col px-8 justify-center items-start md:pt-0 pt-32">
                 <h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Peer-to-Peer Messaging</h3>
-                <p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display font-medium leading-normal">PCNP removes centralized choke points from your messages for greater privacy and security. Levering a peer-to-peer network instead of centralized servers for the routing of messages, your communication is yours and yours alone.</p>
+                <p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display  leading-normal">PCNP removes centralized choke points from your messages for greater privacy and security. Levering a peer-to-peer network instead of centralized servers for the routing of messages, your communication is yours and yours alone.</p>
                 <div class="flex">
-                    <a href="https://our.PCNP.io/peer-to-peer-messaging-where-whisper-falls-short-and-waku-picks-up/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-white text-lg ml-8">
+                    <a style="margin-left: -1px" href="https://our.PCNP.io/peer-to-peer-messaging-where-whisper-falls-short-and-waku-picks-up/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-white text-lg ml-8">
                         Learn More
                         <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
                     </a>
@@ -363,14 +363,14 @@ Benefits -->
                     </div>
                 </div>
                 <h3 style="color: #fff;" class="font-display text-4xl mt-auto mt-12 xl:text-5xl 2xl:text-6xl">End-to-End Encryption<br> by Default</h3>
-                <p style="color: #fff;" class="text-gray-600 mt-12 mb-20 text-xl font-display font-medium leading-normal">Increased privacy with end-to-end encryption (e2ee) on all of your private messages by default. Nobody other than you and your intended recipient can view your messages – not even PCNP.</p>
+                <p style="color: #fff;" class="text-gray-600 mt-12 mb-20 text-xl font-display  leading-normal">Increased privacy with end-to-end encryption (e2ee) on all of your private messages by default. Nobody other than you and your intended recipient can view your messages – not even PCNP.</p>
             </div>
             <div class="flex flex-col px-8 justify-center items-start md:pt-0 pb-32 md:pb-0">
                 <div class="mx-auto flex justify-center items-center md:block pb-16 md:pt-48">
                     <img src="./theme-assets/images/messenger-protection-2x.png">
                 </div>
                 <h3 style="color: #fff;" class="font-display text-4xl mt-12 xl:text-5xl 2xl:text-6xl">Protect Your Past and Future Messages</h3>
-                <p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display font-medium leading-normal">PCNP leverages a modified version of the double ratchet algorithm for perfect forward secrecy. Protect your past and future messages even if your current encryption keys are somehow compromised.</p>
+                <p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display leading-normal">PCNP leverages a modified version of the double ratchet algorithm for perfect forward secrecy. Protect your past and future messages even if your current encryption keys are somehow compromised.</p>
                 <a href="https://our.PCNP.io/the-life-of-a-message/" target="_blank" class="group inline-flex group items-center text-primary-base font-semibold font-special mt-6">
                     Learn More
                     <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right.svg"></span>
