--- a/Web3-Browser.html
+++ b/Web3-Browser.html
@@ -197,7 +197,7 @@
 				</div>
 				<div class="relative mt-24 md:mt-0">
 					<div class="md:-mt-24 mx-auto flex justify-center items-center md:block md:pt-20">
-						<img style="margin-left: 130px;" src="theme-assets/images/pcn0- Copy.png">
+						<img  src="theme-assets/images/pcn0- Copy.png">
 					</div>
 				</div>
 			</div>
