--- a/keygard.html
+++ b/keygard.html
@@ -171,13 +171,13 @@
    
       <main id="main" role="main" class="template-keycard">
 
-        <section style="margin-left: 30px;" class="pt-16 xl:pt-64 keycard-intro">
+        <section style="margin-left: 13px; margin-top: 60px;" class="pt-16 xl:pt-64 keycard-intro">
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
                 <div class="grid grid-cols-12 gap-12">
                     <div class="col-span-12 lg:col-span-7">
                         <h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl">Add Hardware Security to Your PCNP Experience</h1>
                         <p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal">Protect your assets and accounts with Keycard - the cold storage hardware wallet with a contactless, convenient experience.</p>
-              <a href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-16">
+              <a style="width: 220px; margin-left: -1px;" href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-16">
                 Get a Keycard €24.9
                 <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
               </a>
