fix features responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/animate/animate.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/flipclock/flipclock.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="./theme-assets/css/features.css">
+    <link rel="stylesheet" href="./theme-assets/css/main2.css">
     <!-- END VENDOR CSS-->
     <!-- END CRYPTO CSS-->
     <!-- BEGIN Page Level CSS-->
@@ -460,8 +460,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bg-black relative md:-mt-16">
-                        <span class="bg-black w-screen absolute -z-1 left-0 h-full"></span>
+                    <div class=" relative md:-mt-16">
+                        <span class=" w-screen absolute -z-1 left-0 h-full"></span>
                         <div class="h-full px-8 py-32 md:pr-16 text-white">
         <div class="row">
                             <div class="col-md-11 col-lg-10">
