--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
             <section >
                 <div class="max-w-screen-2xl mx-auto lg:px-12">
                     <div class="grid md:grid-cols-2">
-                        <div class="bg-black relative md:-mb-16 order-2 md:order-none">
-                            <span class="bg-black w-screen absolute -z-1 right-0 h-full"></span>
+                        <div class="relative md:-mb-16 order-2 md:order-none">
+                            <span class="w-screen absolute -z-1 right-0 h-full"></span>
                             <div class="h-full flex flex-col space-between px-8 py-32 md:pr-16 text-white">
                                 <div>
                                     <p style="font-size: 15px;" class="text-lg 2xl:text-xl text-gray-300">Own Your Data</p>
